--- a/donate-crypto/css/default.css
+++ b/donate-crypto/css/default.css
@@ -1,7 +1,26 @@
+:root {
+	--background: white;
+	--text: #0f0f0f;
+	--button-background: white;
+	--button-shadow: #ccc;
+	--button-selection: #007aff;
+	--wallet-selection: #007aff;
+}
+@media (prefers-color-scheme: dark) {
+	:root {
+		--background: black;
+		--text: #f1f1f1;
+		--button-background: black;
+		--button-shadow: #555;
+		--button-selection: #007aff;
+		--wallet-selection: #f1f1f1;
+	}
+}
+
 body {
 	margin: 0;
-	background: white;
-	color: black;
+	background: var(--background);
+	color: var(--text);
 	font-family: 'Inter', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 }
 .header {
@@ -20,35 +39,36 @@ body {
 	padding: 0.5em;
 }
 .coin_button {
-	background: none;
 	border: 0;
 	padding: 0;
 	cursor: pointer;
 	white-space: nowrap;
 	font-size: 0.8em;
 	font-weight: 300;
-	-webkit-font-smoothing: antialiased;
 	line-height: 1.5;
+	color: var(--text);
+	background: none;
+	-webkit-font-smoothing: antialiased;
 }
 .rounded_square {
 	display: block;
 	border-radius: 8px;
-	background: #fff;
 	width: 3em;
 	padding: 0.5em;
 	line-height: 0;
 	margin: 0 auto 0.3em;
-	box-shadow: 1px 1px 8px #ccc;
-	border: 1px #fff solid;
+	background: var(--button-background);
+	border: 1px var(--button-background) solid;
+	box-shadow: 1px 1px 8px var(--button-shadow);
 }
 .coin_icon {
 	height: 3em;
 }
 .selected {
-	border: 1px #007aff solid;
+	border: 1px var(--button-selection) solid;
 }
 .wallet_address:focus {
-	border: 1px #007aff solid;
+	border: 1px var(--wallet-selection) solid;
 	outline: none;
 }
 
@@ -67,7 +87,9 @@ body {
 .qrcode, .wallet_address {
     border-radius: 8px;
     font-size: 0.8em;
-	border: 1px #555 solid;
+	border: 1px var(--text) solid;
+	background: white;
+	color: black;
 }
 .qrcode {
 	width: 8em;
