--- a/donate-crypto/templates/index.jinja
+++ b/donate-crypto/templates/index.jinja
@@ -32,7 +32,8 @@
 	<link rel="manifest" href="site.webmanifest">
 	<link rel="mask-icon" href="safari-pinned-tab.svg" color="#26a17b">
 	<meta name="msapplication-TileColor" content="#2b5797">
-	<meta name="theme-color" content="#ffffff">
+	<meta name="theme-color" media="(prefers-color-scheme: light)" content="white">
+	<meta name="theme-color" media="(prefers-color-scheme: dark)" content="black">
 	<title>Donate Crypto</title>
 </head>
 <body>
@@ -49,7 +50,7 @@
 			{{ w['name'] }}
 		</button>
 		{% else %}
-		&nbsp;
+		<span></span>
 		{% endif %}
 		{% endfor %}
 		{% endfor %}
