--- a/donate-crypto/css/default.css
+++ b/donate-crypto/css/default.css
@@ -31,6 +31,12 @@
 	vertical-align: top;
 	margin-left: 1.25em;
 }
+.select_currency {
+	display: grid;
+	grid-template-columns: repeat(7, 6.7em);
+	grid-template-rows: repeat(4, 6.7em);
+	gap: 0.7em;
+}
 @media screen and (max-width: 1100px) {
 	.main {
 		display: block;
@@ -40,6 +46,9 @@
 	}
 	.qrcode {
 		margin-left: 1.75em;
+	}
+	.select_currency {
+		padding-left: 0.5em;
 	}
 }
 
@@ -53,12 +62,6 @@ html, body {
 	font-size: x-large;
 	text-align: center;
 	padding: 1em 0.5em 0.5em;
-}
-.select_currency {
-	display: grid;
-	grid-template-columns: repeat(7, 6.7em);
-	grid-template-rows: repeat(4, 6.7em);
-	gap: 0.7em;
 }
 .coin_button {
 	border: 0;
